--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.0",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
